--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -35,6 +35,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### [Code : Triplet Sum](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/triplets.cpp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### [2. Maximum Sub Array Sum](https://practice.geeksforgeeks.org/problems/kadanes-algorithm/0)\n",
     "\n",
     "#### Approaches:\n",
@@ -62,6 +69,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### [Code : Kadane](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/kadane.cpp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### [3. Reversing Subgroups of array](https://practice.geeksforgeeks.org/problems/reverse-array-in-groups/0)"
    ]
   },
@@ -77,6 +91,13 @@
    "metadata": {},
    "source": [
     "        1. Use stack for each group to reverse and queue and vector to maintain the rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Code: Reversing Subgroups of array](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/reversegroup.cpp)"
    ]
   },
   {
@@ -108,52 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Code: (Approach 2)\n",
-    "```\n",
-    "long long int merge(int v[],int left, int right, int q, long long inv){\n",
-    "\t\t\t\t\tint n1 = q-left+1, n2=right-q; \n",
-    "\t\t\t\t\tint a[n1],b[n2];\n",
-    "\n",
-    "\t\t\t\t\tfor(int i = 0, x=0;i<n1;i++){\n",
-    "\t\t\t\t\t\ta[i] = v[left+i];\n",
-    "\t\t\t\t\t}\n",
-    "\t\t\t\t\tfor(int i = 0,x=0;i<n2;i++){\n",
-    "\t\t\t\t\t\tb[i] = v[q+i+1];\n",
-    "\t\t\t\t\t}\n",
-    "\t\t\t\t\t// cout<<\"left right q \"<<left<<' '<<right<<' '<<q<<endl;\n",
-    "\t\t\t\t\tint i = 0, j=0, p = left;\n",
-    "\t\t\t\t\twhile(i<n1 && j<n2){\n",
-    "\t\t\t\t\t\tif(a[i] <= b[j]){\n",
-    "\t\t\t\t\t\t\tv[p] = a[i];\n",
-    "\t\t\t\t\t\t\tp++;i++;\n",
-    "\t\t\t\t\t\t\t\n",
-    "\t\t\t\t\t\t}\n",
-    "\t\t\t\t\t\telse{\n",
-    "\t\t\t\t\t\t\tv[p] = b[j];\n",
-    "\t\t\t\t\t\t\tp++;j++;\n",
-    "\t\t\t\t\t\t\tinv = inv + n1 - i;\n",
-    "\t\t\t\t\t\t}\n",
-    "\t\t\t\t\t}\n",
-    "\t\t\t\t\twhile(i<n1){\n",
-    "\t\t\t\t\t\tv[p]=a[i];\n",
-    "\t\t\t\t\t\tp++;i++;\n",
-    "\t\t\t\t\t}\n",
-    "\t\t\t\t\twhile(j<n2){\n",
-    "\t\t\t\t\t\tv[p] = b[j];\n",
-    "\t\t\t\t\t\tp++;j++;\n",
-    "\t\t\t\t\t}\n",
-    "\t\t\t\t\treturn inv;\n",
-    "\t\t\t\t\t\n",
-    "\t\t\t\t}\n",
-    "\n",
-    "long long int merge_sort(int a[],int left,int right,long long int inv)\n",
-    "\t\t\t\t if(left<right){\n",
-    "\t\t\t\t\tint q = (left+right)/2;\n",
-    "\t\t\t\t\tx= merge_sort(v,left,q, inv);\n",
-    "\t\t\t\t    y= merge_sort(v,q+1,right,inv);\n",
-    "\t\t\t\t\tinv= x + y + merge(v,left,right,q,inv);\n",
-    "\t\t\t\t\treturn inv;\n",
-    "```"
+    "#### [Code: Number of inversions](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/invopt.cpp)"
    ]
   },
   {
@@ -175,6 +151,13 @@
    "metadata": {},
    "source": [
     "1. Use ***multimaps*** to store arrival and departure times like (10:00,'a'),(11:30,'d'). By default multimaps are sorted on the first key so we can easily count maximum number of platforms required by keeping the track of number of trains arrived butnot yet departed till a particular time. T(n) = O(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Code: Minimum Number of train platforms]()"
    ]
   },
   {
@@ -234,6 +217,13 @@
     "                    \n",
     "                \n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Code: Maximum of subarrays of size k](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/subgroupsmax.cpp)"
    ]
   },
   {
