changes in notebook added one url

--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Code: Minimum Number of train platforms]()"
+    "#### [Code: Minimum Number of train platforms](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/train.cpp)"
    ]
   },
   {
@@ -225,13 +225,6 @@
    "source": [
     "#### [Code: Maximum of subarrays of size k](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/subgroupsmax.cpp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
