New changes in notebook

--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# C++ good problem's core \n"
+    "# C++ star problem's core \n"
    ]
   },
   {
@@ -183,6 +183,7 @@
     "3. Using **Deque**. (In Deque insertion and deletion at both end is possible and it keeps the element sorted). ```T(n) = O(n)```\n",
     "    \n",
     "    Algo for Deque approach:\n",
+    "    Let total array size is n and window size is k and deque size is also k. Remeber: Deque will only store indeces as it already will be in sorted order.\n",
     "    \n"
    ]
   },
@@ -190,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```Let total array size is n and window size is k and deque size is also k. Remeber: Deque will only store indeces as it already will be in sorted order.\n",
+    "```\n",
     "    \n",
     "   Step 1: for i=0  to k-1                                        (first window):\n",
     "                 \n",
