changes in notebook

--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -226,6 +226,70 @@
    "source": [
     "#### [Code: Maximum of subarrays of size k](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/subgroupsmax.cpp)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [7. Peak Element](https://practice.geeksforgeeks.org/problems/peak-element/1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Approaches:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. This is an exception case where we can use binary search in an unsorted array because we have to provide any index which is at its peak. ```T(n) = O(log n)```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```Algo :\n",
+    "Using binary search approach :\n",
+    "Bsearch(int a[],left,right,n) \n",
+    "\n",
+    "if(left<=right)\n",
+    "1. q = (left+right)/2\n",
+    "2. if q is 0 :\n",
+    "    if a[q]>=a[q+1]: return q\n",
+    "    else return Bsearch(a,q+1,right,n)       // we will search at right of q=0 cuz we certainly know that alteast a[q+1] > a[q]\n",
+    "\n",
+    "3. else if q is n-1 :\n",
+    "    if a[q]>=a[q-1]: return q\n",
+    "    else return Bsearch(a,left,q-1,n)     // we will search at left of q=n-1 cuz we certainly know that alteast a[q-1] > a[q]\n",
+    "4. else:\n",
+    "    if a[q]>= a[q-1] and a[q] >= a[q+1] : return q\n",
+    "    \n",
+    "    else if a[q] < a[q-1]:\n",
+    "        return Bsearch(a,left,q-1,n)     // we will search at left of q cuz we certainly know that alteast a[q-1] > a[q] \n",
+    "    \n",
+    "    else if a[q]<a[q+1]:\n",
+    "        return Bsearch(a,q+1,right,n)    // we will search at right of q cuz we certainly know that alteast a[q+1] > a[q]\n",
+    "5. Done\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Code: Peak element]()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
