--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -252,7 +252,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```Algo :\n",
+    "```\n",
+    "Algo :\n",
     "Using binary search approach :\n",
     "Bsearch(int a[],left,right,n) \n",
     "\n",
@@ -274,6 +275,7 @@
     "    else if a[q]<a[q+1]:\n",
     "        return Bsearch(a,q+1,right,n)    // we will search at right of q cuz we certainly know that alteast a[q+1] > a[q]\n",
     "5. Done\n",
+    "\n",
     "```"
    ]
   },
@@ -281,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Code: Peak element]()"
+    "#### [Code: Peak element](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/peakelement.cpp)"
    ]
   },
   {
