changes in notebook new question

--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -287,11 +287,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### [<font color = 'red'>8. Trapping Rain Water</font>](https://practice.geeksforgeeks.org/problems/amount-of-water/0/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Approaches:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. <b><u>Brute Force</u></b>: For each element in the array we will lineary find maximum to its left and maximum to its right including that element itself (say at index i) then calculate min(leftmax,rightmax) and total_water+=( min(leftmax,rightmax) - a[i]).\n",
+    "\n",
+    "```T(n) = O(n^2)```\n",
+    "```S(n) = O(1) ``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. <b><u>Maintaing separate arrays for lmax and rmax </u></b>: For each element maintain two separate arrays lmax[] and rmax[]. Now for each element in array a[0...n], find tw+=(min(lmax[i],rmax[i])-a[i]).\n",
+    "\n",
+    "```T(n) = O(n)``` ```S(n) = O(n)```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. <b><u>Two Pointer Approach:</u></b> If we plot leftmax[] and rightmax[] against index i the leftmax will be a non-decresing and rightmax[] will be a non-increasing function and min(leftmax,rigtmax) will be a lower envelope function which consists of a plot that firstly increases and then decreases, such question which  have min(max,max) or max(min,min) functions i.e lower envelope function can be optimized through generally using:\n",
+    "\n",
+    "```a. Two pointer approach (Mostly Used)``` or ```b. Binary Search approach.```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Two Pointer Approach:   ``` T(n) = O(n)``` ```S(n) = O(1)```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "water_trapped(int a[],n)\n",
+    "\n",
+    "1. If n<3 then\n",
+    "       return 0\n",
+    "2. else\n",
+    "    leftmax = a[0], rightmax = a[n-1], left = 0, right = n-1, total_water = 0\n",
+    "    \n",
+    "    while(left<=right) :\n",
+    "    \n",
+    "        if(leftmax < rightmax):\n",
+    "            \n",
+    "            leftmax, rightmax = max(leftmax,a[left]), max(rightmax, a[right])\n",
+    "            \n",
+    "            total_water += (leftmax - a[left])\n",
+    "            \n",
+    "            left++\n",
+    "          \n",
+    "        else : \n",
+    "        \n",
+    "            leftmax, rightmax = max(leftmax,a[left]), max(rightmax, a[right])\n",
+    "            \n",
+    "            total_water += (leftmax - a[right])\n",
+    "            \n",
+    "            right--\n",
+    "3. return total_water        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Code. Trapped Water]()  "
+   ]
   }
  ],
  "metadata": {
