--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -370,8 +370,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Code. Trapped Water]()  "
+    "#### [Code. Trapped Water](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/trapwaterOnSn.cpp)  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
