changes in font

--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [<font color = 'red'>8. Trapping Rain Water</font>](https://practice.geeksforgeeks.org/problems/amount-of-water/0/)"
+    "### [8. Trapping Rain Water**](https://practice.geeksforgeeks.org/problems/amount-of-water/0/)"
    ]
   },
   {
