added new point

--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -374,6 +374,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [9. Count digits in a factorial](https://practice.geeksforgeeks.org/problems/count-digits-in-a-factorial/0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Approaches:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Approach 1. Calculating a factorial of number and taking a log of the result. This approach has a limitation as ***we cant calculate the factorial > 50*** even using ```unsigned long long int```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Approach 2. Using mathematical approach to calculate digits :\n",
+    "\n",
+    "n=10 i.e calculate no. of digits in 10!\n",
+    "\n",
+    "lets say 10! <= 10^x\n",
+    "\n",
+    "take log both sides :\n",
+    "\n",
+    "log10(10!) <= xlog10(10)\n",
+    "\n",
+    "log10+log9.....+log2+log1 <= x\n",
+    "\n",
+    "floor(log10+log9.....+log2+log1) = x;\n",
+    "\n",
+    "\n",
+    "now we just have to calculate no. of digits in 10^x \n",
+    "which is equal to x+1 (cuz digits in 10^2 = 3)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Code: Count digits in a factorial]()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
