--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -422,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Code: Count digits in a factorial]()"
+    "#### [Code: Count digits in a factorial](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/basicfac.cpp)"
    ]
   },
   {
