added new point

--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -426,6 +426,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [10. No. of Open doors](https://practice.geeksforgeeks.org/problems/number-of-open-doors/0/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Approaches:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of iterating for n times and changing the state of door at each time , It can be seen that every door follows this pattern:\n",
+    "No. of factors of nth door = no. of times the state of door will change\n",
+    "e.g if we have 5 doors then:\n",
+    "\n",
+    "Initially all are closed\n",
+    "**Door 1 ---> factors: 1      state--->(open)**\n",
+    "Door 2 ---> factors: 1,2    state--->(open,closed)\n",
+    "Door 3 ---> factors: 1,3    state--->(open,closed)\n",
+    "**Door 4 ---> factors: 1,2,4  state---> (open, closed , open)**\n",
+    "Door 5 ---> factors: 1,5    state---> (open, closed)\n",
+    "\n",
+    "It is clearly seen that only perfect squares will have odd no. of factors and hence an open door at the end.\n",
+    "\n",
+    "So Finally no. of open doors for n total doors = total no of perfect squares till n.\n",
+    "\n",
+    "and <b><font color ='green'> total no. of perfect squares till n = floor(sqrt(n)) </font></b>\n",
+    "\n",
+    "so simply answer is ```floor(sqrt(n))```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` Code: cout<< floor(sqrt(n)) ```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -449,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
