--- a/Cproblems.ipynb
+++ b/Cproblems.ipynb
@@ -471,6 +471,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [11. Maximum Sum Triplet](https://www.interviewbit.com/problems/maximum-sum-triplet/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Problem Statement :\n",
+    "\n",
+    "Given an array A containing N integers.\n",
+    "\n",
+    "You need to find the maximum sum of triplet ( Ai + Aj + Ak ) such that 0 <= i < j < k < N and Ai < Aj < Ak.\n",
+    "\n",
+    "If no such triplet exist return 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Approach\n",
+    "\n",
+    "Simple Approach is to traverse for every triplet with three nested ‘for loops’ and find update the sum of all triplets one by one. Time complexity of this approach is O(N^3) which is not sufficient for larger value of ‘N’.\n",
+    "\n",
+    "\n",
+    "Better approach is to make further optimization in above approach.\n",
+    "Instead of traversing through every triplets with three nested loops, we can traverse through two nested loops.\n",
+    "While traversing through each number(assume as middle element(Aj)), find maximum number(Ai) smaller than Aj preceding it and maximum number(Ak) greater than Aj beyond it.\n",
+    "Now after that, update the maximum answer with calculated sum of Ai + Aj + Ak.\n",
+    "Time complexity: O(N2)\n",
+    "Auxiliary space: O(1)\n",
+    "This approach is also that much efficient we are looking for.\n",
+    "\n",
+    "\n",
+    "Best Approach:\n",
+    "Best and efficient approach is use the concept of maximum suffix-array and binary search.\n",
+    "\n",
+    "    1.) For finding maximum number greater than given number beyond it, we can maintain a maximum suffix-array array such that for any number(suffix[i]) it would contain maximum number from index i, i+1, … N-1. Suffix array can be calculated in O(N) time.\n",
+    "\n",
+    "    2.) For finding maximum number smaller than the given number preceding it, we can maintain a sorted list of numbers before a given number such we can simply perform a binary search to find a number which is just smaller than the given number. In C++ language, we can perform this by using set associative container of STL library.\n",
+    "\n",
+    "Time complexity: O(NlogN)\n",
+    "Auxiliary space: O(N)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Code: Count digits in a factorial](https://github.com/bathejaakshay/Competitive-Problems-in-C-/blob/master/Source%20Code/maxsumtriplet.cpp)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -494,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
